RESOLVED FIXED19135
console.assert should prefix messages with "Assertion failed: "
https://bugs.webkit.org/show_bug.cgi?id=19135
Summary console.assert should prefix messages with "Assertion failed: "
Adam Roben (:aroben)
Reported 2008-05-19 21:56:03 PDT
console.assert should prefix messages with "Assertion failed: ". This would make it clearer why the message was logged.
Attachments
proposed patch (3.21 KB, patch)
2009-10-21 20:07 PDT, Keishi Hattori
timothy: review-
proposed patch 2 (37.52 KB, patch)
2009-10-21 20:37 PDT, Keishi Hattori
no flags
Keishi Hattori
Comment 1 2009-10-21 20:07:05 PDT
Created attachment 41632 [details] proposed patch Adds an AlertMessageType. "Assertion failed: " is added in the front-end.
Timothy Hatcher
Comment 2 2009-10-21 20:25:26 PDT
Comment on attachment 41632 [details] proposed patch > + messageTextElement.appendChild(document.createTextNode("Assertion failed: ")); This sting needs to be localizable. WebInspector.UIString and added LocalizableStrings.js.
Keishi Hattori
Comment 3 2009-10-21 20:37:37 PDT
Created attachment 41634 [details] proposed patch 2 Fixed :)
Keishi Hattori
Comment 4 2009-10-21 21:52:23 PDT
*** Bug 19136 has been marked as a duplicate of this bug. ***
Eric Seidel (no email)
Comment 5 2009-10-26 12:08:29 PDT
Comment on attachment 41634 [details] proposed patch 2 AFAIK Keishi is not a committer, so adding this to the queue for the bot.
WebKit Commit Bot
Comment 6 2009-10-26 12:31:06 PDT
Comment on attachment 41634 [details] proposed patch 2 Clearing flags on attachment: 41634 Committed r50084: <http://trac.webkit.org/changeset/50084>
WebKit Commit Bot
Comment 7 2009-10-26 12:31:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.