2009-10-26  Keishi Hattori  <casey.hattori@gmail.com>

Reviewed by Timothy Hatcher.

        console.assert should prefix messages with "Assertion failed: "
        https://bugs.webkit.org/show_bug.cgi?id=19135

        * English.lproj/localizedStrings.js:
        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleMessage.prototype.toMessageElement): Append "Assertion failed: " for AssertMessageType.
        (WebInspector.ConsoleMessage.prototype.toString):
        * page/Console.cpp:
        (WebCore::Console::assertCondition): Use AssertMessageType.
        * page/Console.h:
        (WebCore::MessageType): Added AssertMessageType.

Canonical link: https://commits.webkit.org/41530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50084 268f45cc-cd09-0410-ab3c-d52691b4dbfc